fixing mutability on list to apply the sort